@@ -1,3 +1,6 @@
+2005-03-27 Shachar Shemesh
+	* Change the license to explicitly allow linking with OpenSSL
+
 Version 0.11
 2005-03-11 Shachar Shemesh
 	* Make sure encryption continues even if a file open fails with
